Add new conclusion fields #204
* Add new conclusion fields to component modal. New fields include
  Download URL, License URL, Notice URL, Feature, Modified, Deployed,
  Purpose, Code Type

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -296,17 +296,63 @@
                             <label for="component-copyright">Copyright</label>
                             <select data-hide-on-select="true" class="form-control" id="component-copyright" name="component-copyright" type="text"></select>
                         </fieldset>
-                         <fieldset class="form-group">
-                            <label for="component-language">Programming Language</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-language" name="component-language" type="text"></select>
+                        <fieldset>
+                            <label>Modified</label>
+                            <div class="radio">
+                                <label for="component-modified-yes" class="radio-inline">
+                                    <input name="component-modified" type="radio" id="component-modified-yes" value="yes">Yes
+                                </label>
+                                <label for="component-modified-no" class="radio-inline">
+                                    <input name="component-modified" type="radio" id="component-modified-no" value="no">No
+                                </label>
+                            </div>
                         </fieldset>
-                         <fieldset class="form-group">
-                            <label for="component-homepage-url">Homepage URL</label>
-                            <select data-hide-on-select="true" class="form-control" id="component-homepage-url" name="component-homepage-url" type="text"></select>
+                        <fieldset>
+                            <label>Deployed</label>
+                            <div class="radio">
+                                <label for="component-deployed-yes" class="radio-inline">
+                                    <input name="component-deployed" type="radio" id="component-deployed-yes" value="yes">Yes
+                                </label>
+                                <label for="component-deployed-no" class="radio-inline">
+                                    <input name="component-deployed" type="radio" id="component-deployed-no" value="no">No
+                                </label>
+                            </div>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-code-type">Code Type</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-code-type" name="component-code-type" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-notes">Notes</label>
                             <textarea class="form-control" id="component-notes" name="component-notes" rows="3"></textarea>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-feature">Feature</label>
+                            <input type="text" class="form-control" id="component-feature" name="component-feature" placeholder="Enter feature">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-purpose">Purpose</label>
+                            <input type="text" class="form-control" id="component-purpose" name="component-purpose" placeholder="Enter purpose">
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-language">Programming Language</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-language" name="component-language" type="text"></select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-homepage-url">Homepage URL</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-homepage-url" name="component-homepage-url" type="text"></select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-download-url">Download URL</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-download-url" name="component-download-url" type="text"></select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-license-url">License URL</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-license-url" name="component-license-url" type="text"></select>
+                        </fieldset>
+                        <fieldset class="form-group">
+                            <label for="component-notice-url">Notice URL</label>
+                            <select data-hide-on-select="true" class="form-control" id="component-notice-url" name="component-notice-url" type="text"></select>
                         </fieldset>
                     </form>
                 </div>
