Added new component fields to table #204
Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -441,6 +441,7 @@
         </div>
     </div>
 
+    <script src="assets/app/js/utils.js"></script>
     <script src="assets/app/js/aboutCodeDB.js"></script>
     <script src="assets/app/js/splitter.js"></script>
     <script src="assets/app/js/nodeview.js"></script>
