Add progress bar for chart loading #212
* Add c3.js circular progress bar for Dashboard charts

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -163,43 +163,43 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-lg-3 col-sm-6 col-xs-12">
+                            <div class="col-lg-3 col-sm-6 col-xs-12" id="source-chart">
                                 <div class="card">
                                     <div class="header">
                                         <p class="category">Programming Languages</p>
                                     </div>
                                     <div class="content">
-                                        <div id="source-chart"></div>
+                                        <div class="chart"></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-xs-12">
+                            <div class="col-lg-3 col-sm-6 col-xs-12" id="license-category-chart">
                                 <div class="card">
                                     <div class="header">
                                         <p class="category">License Categories</p>
                                     </div>
                                     <div class="content">
-                                        <div id="license-category-chart"></div>
+                                        <div class="chart"></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-xs-12">
+                            <div class="col-lg-3 col-sm-6 col-xs-12" id="license-key-chart">
                                 <div class="card">
                                     <div class="header">
                                         <p class="category">License Keys</p>
                                     </div>
                                     <div class="content">
-                                        <div id="license-key-chart"></div>
+                                        <div class="chart"></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-lg-3 col-sm-6 col-xs-12">
+                            <div class="col-lg-3 col-sm-6 col-xs-12" id="packages-type-chart">
                                 <div class="card">
                                     <div class="header">
                                         <p class="category">Package Types</p>
                                     </div>
                                     <div class="content">
-                                        <div id="packages-type-chart"></div>
+                                        <div class="chart"></div>
                                     </div>
                                 </div>
                             </div>
