Add progress bar for DejaCode Upload #212 #217
* Also changed border css for select2 dropdown in chart summary view

Signed-off-by: Jillian Daguil <jdaguil@nexb.com>

--- a/index.html
+++ b/index.html
@@ -210,8 +210,10 @@
 
             <!-- Component DataTable Tab -->
             <div class="tab-pane container" id="tab-component">
-                <table id="components-table" class="display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" >
-                </table>
+                <div class="components-table-container">
+                    <table id="components-table" class="display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" >
+                    </table>
+                </div>
             </div>
 
             <!-- Node View Tab -->
