Change field from Component to name in the modal view #250
Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/index.html
+++ b/index.html
@@ -247,8 +247,8 @@
                             </select>
                         </fieldset>
                         <fieldset class="form-group">
-                            <label for="component-name" data-toggle="tooltip" data-placement="top" title="Name by which the component is commonly referenced.">Component</label>
-                            <input type="text" class="form-control" id="component-name" name="component-name" placeholder="Enter component">
+                            <label for="component-name" data-toggle="tooltip" data-placement="top" title="Name by which the component or package is commonly referenced.">Name</label>
+                            <input type="text" class="form-control" id="component-name" name="component-name" placeholder="Enter component or package name">
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-version" data-toggle="tooltip" data-placement="top" title="Identifies a specific version of a component. The combination of name + version uniquely identifies a component. If the version is (nv) or blank, it signifies an unstated/unknown version (or it indicates that version does not apply to the component), and it does not imply that the information in this component definition applies to any or all possible versions of the component.">Version</label>
