Add support for License Expressions
* add license_expressions to flatFile model
* add license_expressions to BarChart view
* add license_expressions entry to ClueDataTable
* add license expression  to component Modal
* add license expression  to component DataTable
* Remove License from component model + modal
* Update component creation test

Addresses: #243

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/index.html
+++ b/index.html
@@ -255,8 +255,8 @@
                             <input type="text" class="form-control" id="component-version" name="component-version" placeholder="Enter version">
                         </fieldset>
                         <fieldset class="form-group">
-                            <label for="component-license" data-toggle="tooltip" data-placement="top" title="The license that applies to a component. There could be more than one license, in which case a choice is usually required.">License</label>
-                            <select data-hide-on-select="true" class="form-control " id="component-license" name="component-license" type="text"></select>
+                            <label for="component-license-expression" data-toggle="tooltip" data-placement="top" title="The license expression that applies to a component.">License Expression</label>
+                            <select data-hide-on-select="true" class="form-control " id="component-license-expression" name="component-license-expression" type="text"></select>
                         </fieldset>
                         <fieldset class="form-group">
                             <label for="component-owner" data-toggle="tooltip" data-placement="top" title="The unique user-maintained name of the author, custodian, or provider of one or more software objects (licenses, components, products).">Owner</label>
