Test for presence of sqlite file #239
Signed-off-by: John M. Horan <johnmhoran@gmail.com>

--- a/index.html
+++ b/index.html
@@ -425,11 +425,8 @@
                     <h4 class="modal-title">ScanCode Version and Options</h4>
                 </div>
                 <div class="modal-body">
-                    <div id="scancode-label" style="text-align: left;">
-                        <p>
-                            This information has been extracted from your imported ScanCode JSON file:
-                        </p>
-
+                    <div id="scancode-info">
+                        <div id="scancode-label"></div>
                         <pre id="scancode-display"></pre>
                     </div>
                 </div>
