Change ClueDataTable to ScanDataDataTable #268
* Change varible/class/ids in main.css
* Change varible naming in aboutCodeBarChart.js
* Change varible naming in aboutCodeDashboard.js
* Change varible naming in aboutCodeJsTree.js
* Change varible naming in renderer.js
* Change varible/class/ids in index.html
* Change aboutCodeClueDataTable.js to aboutCodeScanDataDataTable.js

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </button>
             </li>
             <li>
-                <button class="btn btn-sidebar" id="show-tab-clues" data-toggle="tab" data-target="#tab-clues" data-placement="right" title="Table View">
+                <button class="btn btn-sidebar" id="show-tab-scandata" data-toggle="tab" data-target="#tab-scandata" data-placement="right" title="Table View">
                     <i class="fa fa-table" aria-hidden="true"></i>
                 </button>
             </li>
@@ -110,9 +110,9 @@
         <!-- Tab Bar -->
         <div class="tab-content split split-flex" id="rightCol">
 
-            <!-- Clue DataTable Tab-->
-            <div class="tab-pane container" id="tab-clues">
-                <table class="clues-table display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
+            <!-- ScanData DataTable Tab-->
+            <div class="tab-pane container" id="tab-scandata">
+                <table class="scandata-table display table table-striped table-bordered dataTable no-footer" cellspacing="0" width="100%" ></table>
             </div>
 
             <!-- Dashboard Tab -->
