Rename AboutCode Manager to ScanCode Workbench
* All references to AboutCode Manager removed
* Various file renames to reflect project name change to ScanCode
  Workbench

Addresses: #324

Signed-off-by: Steven Esser <sesser@nexb.com>

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
     <div class="row">
         <div class="col-md-12">
             <div class="version" style="text-align: center;">
-                <h2 class="logo"><strong class="strong-logo">About</strong>Code Manager</h2>
+                <h2 class="logo"><strong class="strong-logo">Scan</strong>Code Workbench</h2>
                 <h4 id="version"></h4>
             </div>
         </div>
