--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>AboutCode Manager</title>
+    <title>ScanCode Workbench</title>
     <script src="assets/thirdparty/js/jquery-2.1.3.min.js"></script>
     <script src="assets/thirdparty/DataTables/jQuery-2.2.0/jquery-2.2.0.js"></script>
     <link rel="stylesheet" href="assets/thirdparty/css/style.min.css"/>
@@ -378,35 +378,35 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                    <h2 class="modal-title" id="helpModalLabel">AboutCode Manager Help</h2>
+                    <h2 class="modal-title" id="helpModalLabel">ScanCode Workbench Help</h2>
                 </div>
                 <div class="modal-body">
                     <h2>Overview</h2>
-                    <p>AboutCode Manager allows you take the scan results
+                    <p>ScanCode Workbench allows you take the scan results
                         from the ScanCode and create a conclusion-level
                         software inventory. The conclusions (Concluded License,
                         Concluded Owner, etc.) you make when creating your
                         conclusion can be exported as a JSON file or saved as
                         SQLite file. For more information, see our
-                        <a href="https://github.com/nexB/aboutcode-manager/wiki">wiki</a>.
+                        <a href="https://github.com/nexB/scancode-workbench/wiki">wiki</a>.
                     </p>
                     <h3>Basics</h3>
                     <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/AboutCode-Manager-Views">AboutCode Manager Views</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Building">Building</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Platform-Support">Platform Support</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/ScanCode-Workbench-Views">ScanCode Workbench</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Building">Building</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Platform-Support">Platform Support</a></li>
                     </ul>
                     <h3>Tutorials</h3>
                     <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Import-JSON-and-Export-JSON">Import JSON and Export JSON</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Open-and-Save-a-SQLite-File">Open and Save a SQLite File</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Creating-Components">Creating Components</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Navigating-the-Chart-Summary-View">Navigating the Chart Summary View</a></li>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Navigating-the-Node-View">Navigating the Node View</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Import-JSON-and-Export-JSON">Import JSON and Export JSON</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Open-and-Save-a-SQLite-File">Open and Save a SQLite File</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Creating-Components">Creating Components</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Navigating-the-Chart-Summary-View">Navigating the Chart Summary View</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Navigating-the-Node-View">Navigating the Node View</a></li>
                     </ul>
                     <h3>Debugging</h3>
                     <ul>
-                        <li><a class="open-in-default" href="https://github.com/nexB/aboutcode-manager/wiki/Check-for-Errors-in-the-Developer-Tools">Check for Errors in the Developer Tools</a></li>
+                        <li><a class="open-in-default" href="https://github.com/nexB/scancode-workbench/wiki/Check-for-Errors-in-the-Developer-Tools">Check for Errors in the Developer Tools</a></li>
                     </ul>
                 </div>
                 <div class="modal-footer">
